# bing-wallpaper-macos

./: .gitignore  Cargo.toml  README.md  build.rs
src/: delegate.rs  main.rs  picture_manager.rs  preferences.rs  utils.rs  view_controller.rs
